--- a/lock/读写锁的原理分析.md
+++ b/lock/读写锁的原理分析.md
@@ -124,6 +124,79 @@ final int fullTryAcquireShared(Thread current) {
     }
 }
 ```
+HoldCounter
+在读锁获取锁和释放锁的过程中，我们一直都可以看到一个变量rh （HoldCounter ），该变量在读锁中扮演着非常重要的作用。
+
+我们了解读锁的内在机制其实就是一个共享锁，为了更好理解HoldCounter ，我们暂且认为它不是一个锁的概率，而相当于一个计数器。一次共享锁的操作就相当于在该
+计数器的操作。获取共享锁，则该计数器 + 1，释放共享锁，该计数器 - 1。只有当线程获取共享锁后才能对共享锁进行释放、重入操作。所以HoldCounter的作用就是
+当前线程持有共享锁的数量，这个数量必须要与线程绑定在一起，否则操作其他线程锁就会抛出异常。我们先看HoldCounter的定义：
+```text
+static final class HoldCounter {
+    int count = 0;
+    final long tid = getThreadId(Thread.currentThread());
+}
+```
+HoldCounter 定义非常简单，就是一个计数器count 和线程 id tid 两个变量。按照这个意思我们看到HoldCounter 是需要和某给线程进行绑定了，我们知道如
+果要将一个对象和线程绑定仅仅有tid是不够的，而且从上面的代码我们可以看到HoldCounter 仅仅只是记录了tid，根本起不到绑定线程的作用。那么怎么实现呢？答
+案是ThreadLocal，定义如下：
+```text
+static final class ThreadLocalHoldCounter
+            extends ThreadLocal<HoldCounter> {
+    public HoldCounter initialValue() {
+        return new HoldCounter();
+    }
+}
+```
+通过上面代码HoldCounter就可以与线程进行绑定了。故而，HoldCounter应该就是绑定线程上的一个计数器，而ThreadLocalHoldCounter则是线程绑定的
+ThreadLocal。从上面我们可以看到ThreadLocal将HoldCounter绑定到当前线程上，同时HoldCounter也持有线程Id，这样在释放锁的时候才能知道
+ReadWriteLock里面缓存的上一个读取线程（cachedHoldCounter）是否是当前线程。这样做的好处是可以减少ThreadLocal.get()的次数，因为这也是一个耗时
+操作。需要说明的是这样HoldCounter绑定线程id而不绑定线程对象的原因是避免HoldCounter和ThreadLocal互相绑定而GC难以释放它们（尽管GC能够智能的发现
+这种引用而回收它们，但是这需要一定的代价），所以其实这样做只是为了帮助GC快速回收对象而已。
+
+看到这里我们明白了HoldCounter作用了，我们在看一个获取读锁的代码段：
+```text
+else if (firstReader == current) {
+    firstReaderHoldCount++;
+} else {
+    if (rh == null)
+        rh = cachedHoldCounter;
+    if (rh == null || rh.tid != getThreadId(current))
+        rh = readHolds.get();
+    else if (rh.count == 0)
+        readHolds.set(rh);
+    rh.count++;
+    cachedHoldCounter = rh; // cache for release
+}
+```
+这段代码涉及了几个变量：firstReader 、firstReaderHoldCount、cachedHoldCounter 。我们先理清楚这几个变量：
+```text
+private transient Thread firstReader = null;
+private transient int firstReaderHoldCount;
+private transient HoldCounter cachedHoldCounter;
+```
+firstReader 看名字就明白了为第一个获取读锁的线程，firstReaderHoldCount为第一个获取读锁的重入数，cachedHoldCounter为HoldCounter的缓存。
+理清楚上面所有的变量了，HoldCounter也明白了，我们就来给上面那段代码标明注释，如下：
+```text
+//如果获取读锁的线程为第一次获取读锁的线程，则firstReaderHoldCount重入数 + 1
+else if (firstReader == current) {
+    firstReaderHoldCount++;
+} else {
+    //非firstReader计数
+    if (rh == null)
+        rh = cachedHoldCounter;
+    //rh == null 或者 rh.tid != current.getId()，需要获取rh
+    if (rh == null || rh.tid != getThreadId(current))
+        rh = readHolds.get();
+        //加入到readHolds中
+    else if (rh.count == 0)
+        readHolds.set(rh);
+    //计数+1
+    rh.count++;
+    cachedHoldCounter = rh; // cache for release
+}
+```
+这里解释下为何要引入firstRead、firstReaderHoldCount。这是为了一个效率问题，firstReader是不会放入到readHolds中的，如果读锁仅有一个的情况下就
+会避免查找readHolds。
 ```text
 //获取锁失败
 private void doAcquireShared(int arg) {
@@ -446,9 +519,27 @@ protected final boolean tryRelease(int releases) {
 
 
 
+锁降级
+上开篇是LZ就阐述了读写锁有一个特性就是锁降级，锁降级就意味着写锁是可以降级为读锁的，但是需要遵循先获取写锁、获取读锁在释放写锁的次序。注意如果当前线程
+先获取写锁，然后释放写锁，再获取读锁这个过程不能称之为锁降级，锁降级一定要遵循那个次序。
+
+在获取读锁的方法tryAcquireShared(int unused)中，有一段代码就是来判读锁降级的：
+```text
+int c = getState();
+//exclusiveCount(c)计算写锁
+//如果存在写锁，且锁的持有者不是当前线程，直接返回-1
+//存在锁降级问题，后续阐述
+if (exclusiveCount(c) != 0 &&
+        getExclusiveOwnerThread() != current)
+    return -1;
+//读锁
+int r = sharedCount(c);
+```
+锁降级中读锁的获取释放为必要？肯定是必要的。试想，假如当前线程A不获取读锁而是直接释放了写锁，这个时候另外一个线程B获取了写锁，那么这个线程B对数据的修
+改是不会对当前线程A可见的。如果获取了读锁，则线程B在获取写锁过程中判断如果有读锁还没有释放则会被阻塞，只有当前线程A释放读锁后，线程B才会获取写锁成功。
 
 
-
+https://mp.weixin.qq.com/s?__biz=MzUzMTA2NTU2Ng==&mid=2247484040&idx=1&sn=60633c2dc4814b26dc4b39bb2bb5d4dd&chksm=fa497d39cd3ef42f539cd0576c1a3575ee27307048248571e954f0ff21a5a9b1ddfab522c834&scene=21#wechat_redirect
 
 
 
